Fix missing spacing between toolbar groups (#6981)

--- a/indico/web/client/styles/partials/_toolbars.scss
+++ b/indico/web/client/styles/partials/_toolbars.scss
@@ -191,6 +191,7 @@ $toolbar-spacing: 10px;
   display: flex;
   flex-shrink: 0;
   align-items: center;
+  gap: 0.5em;
   min-height: $toolbar-height;
 
   &.fixed-height {
